﻿23.8.3.3
========
 + Enable PreventEnumDevices by default in Baldur's Gate 3; it does not prevent
     Steam Input from working, only disables the part of it that hurts perf.
 + Activate Baldur's Gate 3's window after 15 frames are drawn so that it does
     not think the game is in the background and draw at 30 FPS constantly.

23.8.3.2
========
 + Added INI option to keep Steam Input from murdering performance by
     enumerating devices every frame

    [Input.DInput]
    PreventEnumDevices={true|false}

   * Fixes most of Steam Input's performance issues in Baldur's Gate 3 and
       NieR: Replicant. Sure would be nice if Valve would fix this... :-\

23.8.3.1
========
 + Yet more fixes for Baldur's Gate 3's screwed up gamepad code, yikes!

23.8.3
======
 + Add code to prevent dereferencing a NULL lpMsg when Baldur's Gate 3 calls
     GetMessageW (...) on its SDL_joystick thread.
 + Turned default HDR Saturation on Preset 0 down to 95%, since Perceptual Boost
     massively increases saturation to begin with.

    >> If the new desaturated values are not to your liking, it is suggested you
         try the gamut expansion slider before the adjusting saturation. Gamut
           expansion is more subtle and less "deep fried" color.

23.8.2.3
========
 + Add support for 8-bit HDR remastering in Baldur's Gate 3 (D3D11)

23.8.2.2
========
 + Fixed attempting to copy DXGI_FORMAT_R16_UNORM to DXGI_FORMAT_D16_UNORM using
     BltSurfaceCopy in Baldur's Gate 3 -- formats are direct copy compatible

23.8.2.1
========
 + Changed VRR optimized framerate formula from 95% of Refresh to:

     dVRROptimalFPS =
       dRefreshRate - (dRefreshRate * dRefreshRate) / (60.0 * 60.0) - 0.1

 + Filter out Exceptions from logs if they originate in NVIDIA MessageBus.dll

23.8.2
======
 + Restore compatibility with NVIDIA's Vulkan / DXGI interop layer, broken by
     various code changes to try and make Streamline work :sigh:

23.8.1.4
========