@@ -4,6 +4,10 @@
      Steam Input from working, only disables the part of it that hurts perf.
  + Activate Baldur's Gate 3's window after 15 frames are drawn so that it does
      not think the game is in the background and draw at 30 FPS constantly.
+ + Added INI option to activate a game's window when it starts (see above)
+
+     [Window.System]
+     ActivateAtStart={true|false};  Default: false
 
 23.8.3.2
 ========
